artifacthub/library/general/verifydeprecatedapi/1.0.0/samples/verify-1.22/example_allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allowed-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
