artifacthub/library/general/verifydeprecatedapi/1.0.0/samples/verify-1.26/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: VerifyDeprecatedAPI
metadata:
  name: verify-1.26
spec:
  match:
    kinds:
      - apiGroups: ["flowcontrol.apiserver.k8s.io"]
        kinds: ["FlowSchema", "PriorityLevelConfiguration"]
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
  parameters:
    kvs: 
      - deprecatedAPI: "flowcontrol.apiserver.k8s.io/v1beta1"
        kinds: ["FlowSchema", "PriorityLevelConfiguration"]
        targetAPI: "flowcontrol.apiserver.k8s.io/v1beta3"
      - deprecatedAPI: "autoscaling/v2beta2"
        kinds: ["HorizontalPodAutoscaler"]
        targetAPI: "autoscaling/v2"
    k8sVersion: 1.26
